fixed whitespace issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,12 +18,15 @@
 	--snow-white: #fafafa;
 }
 
+html,
 body {
 	font-family: var(--font-descriptive);
 	background-color: var(--snow-white);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale; 
-    
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
 }
 
 button {
